--- a/config/config_env.rb.example
+++ b/config/config_env.rb.example
@@ -2,5 +2,5 @@
 # Replace [*] with credentials/keys/etc.
 
 config_env do
-  set :DB_KEY, "[database encryption key]"
+  set :DB_KEY, "[database encryption key in base64 url safe encoding]"
 end
